tests/negative/gold/import-show1-test.gold
tests/negative/import-show1-test.toit:8:3: error: Unresolved identifier: 'b'
  b  // Unresolved.
  ^
Compilation failed
